--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,11 +1,12 @@
 <ion-content>
   <div id="header">
-    <img src="../../../assets/Capture.PNG" alt="logo">
+    <ion-img src="../../../assets/img/Farmru_logo_size3.png"></ion-img>
   </div>
-  <div class="authButton">
-   <button>sign in</button>
-  </div>
+ 
   <div class="footer">
+    <div class="authButton">
+      <button>sign in</button>
+     </div>
     <ion-text>
       <h3>Don't have an account? <span>Sign up</span></h3>
     </ion-text>
