--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -1,32 +1,55 @@
-ion-footer{
-    ion-toolbar{
-        border: none !important;
-    }
+*{
+    font-family: 'Roboto', sans-serif;
+}
+ion-content {
+    --background: url('../../../assets/img/imga2.jpg') no-repeat 100% 100%;
+    --background-position: center !important;
+    --background-size: cover !important;
+    --background-repeat: no-repeat !important;
+    --align-items: initial;
+    
 }
 #header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    img{
+    width: 100%;
+   
+    //text-align: center;
+    position: absolute;
+    top:70px;
+    left: 10%;
+    -webkit-backdrop-filter: sepia() hue-rotate(20deg);
+    backdrop-filter: blur(1.5px);
+   
+    //flex-direction: column;
+    //align-items: center;
+    ion-img{
         width: 300px;
         height: 300px;
-        border-radius: 50%;
+       
     }
+  
 }
 .authButton{
    position:absolute;
    width:100%;
    
    bottom: 250px; 
-   background-color: chartreuse;
+   //background-color: chartreuse;
    button{
        background: transparent !important;
-       border: 2px solid rgb(177, 21, 21);
-       padding:5%;
+       -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+       //filter: blur(1px);
+    //-webkit-filter: blur(1px);
+    -webkit-backdrop-filter: sepia() hue-rotate(120deg);
+       
+       border: 3px solid white;
+       padding:4%;
        width: 100%;
        border-radius: 40px;
        font-size: 2rem;
        font-weight: 420;
+       color: white;
+      
     
    }
    padding-left:20px;
@@ -42,5 +65,6 @@ ion-footer{
     h3{
         font-size: 1.2rem;
         font-weight: 400;
+        color: white;
     }
 }
