--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -3,6 +3,7 @@
   <div class="header">
     <ion-text class="welcome-text">
       <h2>welcome back,</h2>
+      <h2>Kenneth</h2>
     </ion-text>
   </div>
    
