--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -1,3 +1,6 @@
+*{
+    font-family: 'Roboto', sans-serif;
+}
 ion-item{
    
     margin-top: 10px;
@@ -5,9 +8,16 @@ ion-item{
     border-radius: 40px;
     margin-left: 15px;
     margin-right: 15px;
+    --background: transparent !important;
 
 }
-
+ion-content {
+    --background: url('../../../assets/img/imga2.jpg') no-repeat 100% 100%;
+    --background-position: center !important;
+    --background-size: cover !important;
+    --background-repeat: no-repeat !important;
+    --align-items: initial;
+}
 .authButton{
     position:absolute;
     width:100%;
@@ -16,16 +26,18 @@ ion-item{
     //background-color: chartreuse;
     button{
         background: transparent !important;
-        border: 1px solid black;
-        padding:5%;
+        border: 2px solid white;
+        padding:4%;
         width: 100%;
         border-radius: 40px;
         font-size: 2rem;
         font-weight: 420;
-     
+        color: white;
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
     }
-    padding-left:27px;
-    padding-right:25px;
+    padding-left:33px !important;
+    padding-right:28px;
     
  }
  
@@ -37,21 +49,29 @@ ion-item{
      h3{
          font-size: 1.2rem;
          font-weight: 400;
+         color: white;
      }
  }
  ion-label{
     
     text-align: center;
-    border: 1px solid black;
+    border: 2px solid white;
     border-radius: 40px;
     //width: 10px !important;
 }
 ion-input{
-   padding:3% !important;
+   padding:1.5% !important;
    border-radius: 40px;
    border:none !important;
-   border: 1px solid black !important;
-  width: 100%;
+   border: 2px solid white !important;
+   width: 100%;
+   text-align: center;
+   color: white;
+   font-size: 23px;
+   font-family: 'Roboto', sans-serif;
+   -webkit-backdrop-filter: blur(5px);
+   backdrop-filter: blur(5px);
+
 }
 
 ion-label{
