--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,1 +1,24 @@
+<ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="dashboard-page">
+        <ion-icon name="add"></ion-icon>
+        <ion-label>tasks</ion-label>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="soil-page">
+        <ion-icon name="list"></ion-icon>
+        <ion-label>applications</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="water-page">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Profile</ion-label>
+      </ion-tab-button>
 
+      <ion-tab-button tab="production-page">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>production</ion-label>
+      </ion-tab-button>
+    
+
+    </ion-tab-bar>
+  </ion-tabs>
