--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content [fullscreen]="true">
   <div id="header">
     <ion-img src="../../../assets/img/Farmru_logo_size3.png"></ion-img>
   </div>
