--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -2,7 +2,7 @@
     font-family: 'Roboto', sans-serif;
 }
 ion-content {
-    --background: url('../../../assets/img/imga2.jpg') no-repeat 100% 100%;
+    --background: url('../../../assets/img/WhatsApp\ Image\ 2021-07-29\ at\ 10.27.42.jpeg') no-repeat 100% 100%;
     --background-position: center !important;
     --background-size: cover !important;
     --background-repeat: no-repeat !important;
