--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -12,7 +12,7 @@ ion-item{
 
 }
 ion-content {
-    --background: url('../../../assets/img/imga2.jpg') no-repeat 100% 100%;
+    --background: url('../../../assets/img/WhatsApp\ Image\ 2021-07-29\ at\ 10.27.42.jpeg') no-repeat 100% 100%;
     --background-position: center !important;
     --background-size: cover !important;
     --background-repeat: no-repeat !important;
