--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -8,14 +8,18 @@
   </div>
    
    <form>
-    <ion-item>
-      <ion-label position="stacked" >email address</ion-label>
-      <ion-input type="tel"></ion-input>
-    </ion-item>
-     <ion-item>
-      <ion-label position="stacked">password</ion-label>
-      <ion-input type="tel"></ion-input>
-    </ion-item>
+       <ion-item lines="none">
+        <ion-label position="stacked" >email address</ion-label>
+        <ion-input type="tel"></ion-input>
+       </ion-item>
+    
+
+      <ion-item lines="none">
+        <ion-label position="stacked">password</ion-label>
+        <ion-input type="tel"></ion-input>
+      </ion-item>
+     
+   
 
      <div class="authButton">
       <button>sign in</button>
