--- a/src/app/pages/dashboard-page/dashboard-page.page.html
+++ b/src/app/pages/dashboard-page/dashboard-page.page.html
@@ -13,30 +13,71 @@
 
 
   <div class="soil-moisture">
-    <ion-text>
-      p
-    </ion-text><br>
-    <ion-text>
-      p
-    </ion-text><br>
-    <ion-text>
-      p
-    </ion-text>
-  </div>
-
-  <div class="cloud-database">
-    <ion-text>
-      p
-    </ion-text><br>
-    <ion-text>
-      p
-    </ion-text><br>
-    <ion-text>
-      p
-    </ion-text>
-  </div>
+    <div class="icon">
+        <ion-avatar>
+          <img src="../../../assets/img/Farmru_logo_size1.png" alt="">
+        </ion-avatar>
+    </div>
    
-  <div class="card">
-    <ion-img src="../../../assets/img/Farmru_logo_size1.png" ></ion-img>
+    <div class="content">
+      <ion-text>
+        <p> soil moisture (1-100%)</p>
+          <p>wet</p>
+      </ion-text>
+    </div>
   </div>
+  
+  <div class="cloud-database">
+  <div class="content">
+    <ion-text>
+      <p>cloud dabase</p>
+        <p>soil moisture</p>
+        <p>humidity</p>
+    </ion-text>
+  </div>
+  <div class="icon">
+    <ion-avatar>
+      <ion-icon name="wifi-outline"></ion-icon>
+    </ion-avatar>
+  </div>
+  </div>
+   <div class="middle-section">
+      <div class="content">
+        <ion-row>
+            <ion-col size="3.5">
+                <img src="../../../assets/img/Farmru_logo_size1.png" alt="">
+                <p>humidity</p>
+                <p>the amount of water vapor in the air.</p>
+            </ion-col>
+            <ion-col size="3.5">
+              <ion-icon name="thermometer-outline"></ion-icon>
+                <h3>temperature</h3>
+                <p>Ambient air temperature in degrees Celcius</p>
+            </ion-col>
+            <ion-col size="4">
+              <ion-icon name="bulb"></ion-icon>
+                <p>light intensyty</p>
+                <p>Environmental light intensity measured in lux</p>
+            </ion-col>
+        
+        </ion-row>
+      </div>
+   </div>
+   <div class="real-time-data-section">
+    <div class="soil-moisture">
+      <div class="icon">
+          <ion-avatar>
+            <ion-icon name="earth-sharp"></ion-icon>
+          </ion-avatar>
+      </div>
+     
+      <div class="content">
+        <ion-text>
+          <p> soil moisture (1-100%)</p>
+            <p>wet</p>
+        </ion-text>
+      </div>
+    </div>
+   </div>
+   
 </ion-content>
