--- a/src/app/pages/dashboard-page/dashboard-page.page.scss
+++ b/src/app/pages/dashboard-page/dashboard-page.page.scss
@@ -2,24 +2,26 @@ ion-toolbar{
     //--background-color:transparent;
     //--ion-color-base:transparent !important;
     //--border-width: 0 !important;
+    
 
 }
 ion-row{
     align-content: space-between !important;
 }
 .header{
-    padding: 3%;
+    //padding: 3%;
     display: grid;
     grid-template-columns: 3fr 0.5fr;
     //justify-content:space-between;
     background-color: 	#daa169;
+    display: none;
     
 }
 img{
     
 }
 ion-avatar{
-    --padding: 1% !important;
+   --padding: 1% !important;
     margin-top: 10px;
     width: 60px;
     height: 60px;
@@ -34,12 +36,7 @@ ion-text{
     }
 }
 .cloud-database{
-    margin:30px 0px 30px 0px;
-    width: 90%;
-    float: left;
-    background-color: rgb(79, 160, 79);
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+
 }
 .soil-moisture{
     margin:30px 0px 30px 0px;
@@ -49,4 +46,188 @@ ion-text{
     text-align: right;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
+}
+.info{
+    background: var(--ion-color-tertiary);
+    color: white;
+   
+}
+ion-row .info:nth-child(1){
+    border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px;
+    //background-color: black;
+   
+}
+
+ion-row .info:nth-child(2){
+    border-bottom-right-radius: 50px;
+    border-top-right-radius: 50px;
+}
+
+//soil div
+.soil-moisture{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    img{
+        width: 64px;
+        height: 65px;
+    }
+    .content{
+        background-color:blue;
+       
+        
+    }
+    //wet text
+    .content ion-text p:nth-child(2){
+        margin-top:-10px !important;
+        font-size: 25px;
+        font-weight: 200;
+        text-align: left;
+    }
+    .content ion-text p:nth-child(1){
+        opacity: 50%; 
+        text-align: left;
+    }
+    .icon{
+       
+        background-color: blanchedalmond;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        ion-avatar{
+            margin:0px 0px 10px 11px !important;
+            
+        }
+
+    }
+}
+//cloud database
+.cloud-database{
+    margin:20px 0px 30px 0px;
+    width: 90%;
+    float: left;
+    background-color: rgb(79, 160, 79);
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+   
+    .icon{
+        //border-radius: 50%;
+        //width: 70px;
+       // height: 70px;
+         padding: 2% 5% 2% 2%;
+        //background-color: blanchedalmond;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+        ion-avatar{
+            margin:11px 5px 10px 11px !important;
+            float: right !important;
+            ion-icon{
+                padding: 2px;
+                width: 60px;
+                height: 60px;
+                background-color: white;
+                border-radius: 50%;
+                color:  rgb(79, 160, 79);
+                text-align: center;
+            }
+        }
+       
+
+    }
+    
+    p{
+        text-align: left;
+    }
+    .content ion-text p:nth-child(2){
+        margin-top:-10px !important;
+       
+    }
+    .content ion-text p:nth-child(3){
+        margin-top:-10px !important;
+       
+    }
+    .content ion-text p:nth-child(1){
+        opacity: 50%; 
+       
+    }
+}
+.cards{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    text-align: center;
+
+    img{
+        width:50px;
+        height: 50px;
+    }
+    ul{
+        li{
+            list-style: none;
+        }
+        border: 1px solid black;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+
+      height: 110px;
+    }
+}
+.middle-section{
+    width: 100%;
+    float: left;
+    .content{
+        width: 100%;
+        text-align: center;
+        ion-row{
+            
+        }
+          ion-col{
+              margin-left: 5px;
+              //border: 1px solid black;
+              border-bottom-left-radius: 40px;
+              border-bottom-right-radius: 40px;
+              border-top-right-radius: 40px;
+              border-top-left-radius: 40px;
+              box-shadow: 0 10px 50px rgba(240, 236, 236, 0.979) inset;
+             
+            
+              ion-icon{
+                  font-size: 50px;
+                  color: rgb(46, 46, 121);
+              }
+
+          }
+    }
+
+}
+
+.real-time-data-section{
+   ion-avatar{
+      
+            --margin:0px 0px 10px -10px !important;
+            float: left !important;
+            ion-icon{
+                padding: 5px;
+                width: 60px;
+                height: 60px;
+                background-color: white;
+                border-radius: 50%;
+                color:  rgb(79, 160, 79);
+                text-align: center;
+                margin-left: -8px !important;
+               
+            }
+        }
+        .icon{
+            padding-top: 5px;
+            padding-bottom: 5px;
+            padding-left: 2px;
+            background-color:  rgb(79, 160, 79) !important;
+        }
+        .content{
+            background-color: rgb(79, 160, 79);
+        }
 }
