worked on dashboard page and soil page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,21 +1,21 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="dashboard-page">
-        <ion-icon name="add"></ion-icon>
-        <ion-label>tasks</ion-label>
+        <img  src="../../assets/Farmru-icons/Group 137@2x.png" alt=""> 
+        <ion-label>dashboard</ion-label>
       </ion-tab-button>
   
       <ion-tab-button tab="soil-page">
-        <ion-icon name="list"></ion-icon>
-        <ion-label>applications</ion-label>
+        <img  src="../../assets/Farmru-icons/Group 137@2x.png" alt="">  
+        <ion-label>soil</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="water-page">
-        <ion-icon name="person"></ion-icon>
-        <ion-label>Profile</ion-label>
+        <img  src="../../assets/Farmru-icons/Group 138.png" alt="">
+        <ion-label>water</ion-label>
       </ion-tab-button>
-
+     
       <ion-tab-button tab="production-page">
-        <ion-icon name="person"></ion-icon>
+        <img  src="../../assets/Farmru-icons/Group 139.png" alt="">
         <ion-label>production</ion-label>
       </ion-tab-button>
     
