--- a/src/app/pages/soil-page/soil-page.page.html
+++ b/src/app/pages/soil-page/soil-page.page.html
@@ -1,9 +1,37 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>soil-page</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
-
+  <div class="header">
+    <div style="padding: 3%;">
+      <ion-text slot="start">
+        <h1>soil</h1>
+      </ion-text>
+    </div>
+     <div style="padding: 3%;">  
+      <ion-avatar slot="end">
+        <img src="../../../assets/img/Farmru_logo_size3.png" alt="">
+      </ion-avatar>
+     </div>
+  
+  </div>
+  <div class="heading">
+    <ion-text>
+      <h1>
+        <span>mtb</span> (month to date)
+      </h1>
+    </ion-text>
+  </div>
+  <div class="soil-moisture">
+    <div class="icon">
+        <ion-avatar>
+          <ion-icon name="water-sharp"></ion-icon>
+        </ion-avatar>
+    </div>
+   
+    <div class="content">
+      <ion-text>
+        <p> Water usage</p>
+          <h3>70L</h3>
+      </ion-text>
+    </div>
+  </div>
 </ion-content>
