--- a/src/app/pages/dashboard-page/dashboard-page.page.html
+++ b/src/app/pages/dashboard-page/dashboard-page.page.html
@@ -2,82 +2,107 @@
 
 <ion-content>
   <div class="header">
-    <ion-text slot="start">
-      <h1>dashbord</h1>
-    </ion-text>
-    <ion-avatar slot="end">
-      <img src="../../../assets/img/Farmru_logo_size3.png" alt="">
-    </ion-avatar>
+    <div style="padding: 3%;">
+      <ion-text slot="start">
+        <h1>dashboard</h1>
+      </ion-text>
+    </div>
+     <div style="padding: 3%;">  
+      <ion-avatar slot="end">
+        <img src="../../../assets/img/Farmru_logo_size3.png" alt="">
+      </ion-avatar>
+     </div>
+  
   </div>
-
-
 
   <div class="soil-moisture">
     <div class="icon">
         <ion-avatar>
-          <img src="../../../assets/img/Farmru_logo_size1.png" alt="">
+          <ion-icon name="water-sharp"></ion-icon>
         </ion-avatar>
     </div>
    
     <div class="content">
       <ion-text>
         <p> soil moisture (1-100%)</p>
-          <p>wet</p>
+          <h3>wet</h3>
       </ion-text>
     </div>
   </div>
   
-  <div class="cloud-database">
-  <div class="content">
-    <ion-text>
-      <p>cloud dabase</p>
-        <p>soil moisture</p>
-        <p>humidity</p>
-    </ion-text>
-  </div>
-  <div class="icon">
-    <ion-avatar>
-      <ion-icon name="wifi-outline"></ion-icon>
-    </ion-avatar>
-  </div>
+
+  <div class="cloud">
+    <div class="cloud-database">
+      <div class="content">
+        <div>
+          <ion-text>
+            <h5>cloud dabases</h5>
+              <ul>
+                <li>soil moisture</li>
+                <li>humidity</li>
+                <li>ambient temperature</li>
+                <li>light intensity</li>
+              </ul>
+          </ion-text>
+        </div>
+        <div>
+          <ion-text>
+            <ul>
+              <li>60%</li>
+              <li>25%</li>
+              <li>25c</li>
+              <li>20lux</li>
+            </ul>
+          </ion-text>
+        
+        </div>
+       
+      </div>
+      <div class="icon">
+        <ion-avatar>
+          <ion-icon name="wifi-outline"></ion-icon>
+        </ion-avatar>
+      </div>
+      </div>
   </div>
    <div class="middle-section">
       <div class="content">
         <ion-row>
-            <ion-col size="3.5">
-                <img src="../../../assets/img/Farmru_logo_size1.png" alt="">
-                <p>humidity</p>
+            <ion-col size="3.8">
+              <ion-icon name="water-outline"></ion-icon>
+                <h3>humidity</h3>
                 <p>the amount of water vapor in the air.</p>
             </ion-col>
-            <ion-col size="3.5">
+            <ion-col size="3.8">
               <ion-icon name="thermometer-outline"></ion-icon>
                 <h3>temperature</h3>
                 <p>Ambient air temperature in degrees Celcius</p>
             </ion-col>
             <ion-col size="4">
               <ion-icon name="bulb"></ion-icon>
-                <p>light intensyty</p>
+                <h3>light intensity</h3>
                 <p>Environmental light intensity measured in lux</p>
             </ion-col>
         
         </ion-row>
       </div>
    </div>
-   <div class="real-time-data-section">
-    <div class="soil-moisture">
-      <div class="icon">
-          <ion-avatar>
-            <ion-icon name="earth-sharp"></ion-icon>
-          </ion-avatar>
-      </div>
-     
-      <div class="content">
-        <ion-text>
-          <p> soil moisture (1-100%)</p>
-            <p>wet</p>
-        </ion-text>
-      </div>
+
+   <div class="real-time-data">
+    <div class="real-time-data-icon">
+      <ion-avatar>
+        <ion-icon name="earth-sharp"></ion-icon>
+      </ion-avatar>
     </div>
-   </div>
    
+    <div class="real-time-data-content">
+      <ion-text>
+        <h5>Real time data</h5>
+          <p>The farm state function displays real time data 
+            of PH level from NPK tester, relative huminity,
+            soil moisture, envirentmental light intensity and humidity.
+          </p>
+      </ion-text>
+    </div>
+  </div>
 </ion-content>
