modified soil page

--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -4,9 +4,8 @@
   </div>
  
   <div class="footer">
-    <div class="authButton">
-      <button>sign in</button>
-     </div>
+    
+     <ion-button expand="block" shape="round" fill="clear" (click)="toDash()">sign in</ion-button>
     <ion-text>
       <h3>Don't have an account? <span>Sign up</span></h3>
     </ion-text>
