--- a/src/app/pages/soil-page/soil-page.page.html
+++ b/src/app/pages/soil-page/soil-page.page.html
@@ -20,18 +20,48 @@
       </h1>
     </ion-text>
   </div>
+
   <div class="soil-moisture">
-    <div class="icon">
-        <ion-avatar>
-          <ion-icon name="water-sharp"></ion-icon>
-        </ion-avatar>
-    </div>
+        <div class="icon">
+            <ion-avatar>
+              <ion-icon name="water-sharp"></ion-icon>
+            </ion-avatar>
+        </div>
    
+        <div class="content">
+          <ion-text>
+            <p> Water usage</p>
+              <h3>70L</h3> 
+          </ion-text>
+        </div>
+  </div>
+
+  <!--graph section-->
+  <div class="line-graph">
+    <ion-card>
+      <ion-card-header> bar Chart </ion-card-header>
+      <ion-card-content>
+        <canvas id="barCanva">
+        </canvas>
+      </ion-card-content>
+    </ion-card>
+    
+  </div><!--end of graph section-->
+  
+  <!--temperature trend section-->
+  <div class="temperature-trend">
     <div class="content">
       <ion-text>
-        <p> Water usage</p>
-          <h3>70L</h3>
+        <p>temperature trend</p>
+          <h3>25<sup>o</sup>C</h3> 
       </ion-text>
     </div>
+    <div class="icon">
+      <ion-avatar>
+        <ion-icon name="thermometer-outline"></ion-icon>
+      </ion-avatar>
+    </div>
   </div>
+
+
 </ion-content>
