--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,6 +18,11 @@
         <img  src="../../assets/Farmru-icons/Group 139.png" alt="">
         <ion-label>production</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button tab="pest-control-page">
+        <img  src="../../assets/Farmru-icons/Group 139.png" alt="">
+        <ion-label>pest control</ion-label>
+      </ion-tab-button>
     
 
     </ion-tab-bar>
