--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,8 +7,9 @@ ion-tab-bar{
 
   ion-label{
     margin-top: -7px;
-    font-size: 11px;
+    font-size: 9px;
     padding-bottom: 10px;
+    text-transform: uppercase;
   }
   
 } 
