--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -12,7 +12,7 @@ ion-content {
 #header{
     width: 100%;
    
-    //text-align: center;
+    text-align: center;
     position: absolute;
     top:70px;
     left: 10%;
@@ -41,10 +41,10 @@ ion-content {
        //filter: blur(1px);
     //-webkit-filter: blur(1px);
     -webkit-backdrop-filter: sepia() hue-rotate(120deg);
-       
+    width: 100%;
        border: 3px solid white;
        padding:4%;
-       width: 100%;
+     
        border-radius: 40px;
        font-size: 2rem;
        font-weight: 420;
@@ -58,7 +58,7 @@ ion-content {
 }
 
 .footer{
-    position:absolute;
+    position:absolute; 
     width:100%;
     bottom: 30px; 
     text-align: center;
@@ -66,5 +66,43 @@ ion-content {
         font-size: 1.2rem;
         font-weight: 400;
         color: white;
+    }
+
+    ion-button{
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+        border: 3px solid white;
+        --padding:3% !important;
+      
+        border-radius: 40px;
+        font-size: 1.5rem;
+        font-weight: 420; 
+        color: white;
+        margin-left:20px;
+        margin-right:20px;
+        margin-bottom: 50px;
+    }
+}
+
+//media qaueries
+@media screen and (max-width: 320px) and (min-width: 320px){
+    #header{
+        width: 100%;
+       
+        text-align: center;
+        position: absolute;
+        top:50px;
+        left: 10%;
+        -webkit-backdrop-filter: sepia() hue-rotate(20deg);
+        backdrop-filter: blur(1.5px);
+       
+        //flex-direction: column;
+        //align-items: center;
+        ion-img{
+            width: 250px;
+            height: 250px;
+           
+        }
+      
     }
 }
