--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -21,9 +21,7 @@
      
    
 
-     <div class="authButton">
-      <button>sign in</button>
-     </div>
+      <ion-button expand="block" shape="round" fill="clear">sign in</ion-button>
    </form>
    <div class="footer">
     <ion-text>
