--- a/src/app/pages/signin/signin.page.scss
+++ b/src/app/pages/signin/signin.page.scss
@@ -68,6 +68,20 @@ form{
    padding-right:30px;
     
  }
+ ion-button{
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    border: 3px solid white;
+    --padding:3% !important;
+  
+    border-radius: 40px;
+    font-size: 1.5rem;
+    font-weight: 420;
+    color: white;
+    margin-left:30px;
+    margin-right:30px;
+    margin-bottom: 50px;
+}
  
  .footer{
      position:absolute;
@@ -119,3 +133,20 @@ ion-item{
    --background: transparent !important;
     --border-bottom-width: 0px !important;
 }
+
+ 
+//media quaries
+
+//smaller phone
+@media screen and (max-width: 320px){
+    ion-button{
+        //display: none;
+    }
+    form{
+   
+        position: absolute;
+        bottom: 60px;
+        width: 100% !important;
+     }
+     
+  }
