--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -9,34 +9,32 @@
   </div>
   
   <form>
-    <ion-item>
+    <ion-item lines="none">
       <ion-label position="stacked" >full names</ion-label>
       <ion-input type="tel"></ion-input>
     </ion-item>
-     <ion-item>
+     <ion-item lines="none">
       <ion-label position="stacked">unique app id</ion-label>
       <ion-input type="tel"></ion-input>
     </ion-item>
-     <ion-item>
+     <ion-item lines="none">
       <ion-label position="stacked">ID number</ion-label>
       <ion-input type="tel"></ion-input>
     </ion-item>
-     <ion-item>
+     <ion-item lines="none">
       <ion-label position="stacked">email address</ion-label>
       <ion-input type="tel"></ion-input>
     </ion-item>
-     <ion-item>
+     <ion-item lines="none">
       <ion-label position="stacked">create password</ion-label>
       <ion-input type="tel"></ion-input>
     </ion-item>
-     <ion-item>
+     <ion-item lines="none">
       <ion-label position="stacked">confim password</ion-label>
       <ion-input type="tel"></ion-input>
     </ion-item>
 
-     <div class="authButton">
-      <button>sign up</button>
-     </div>
+    <ion-button expand="block" shape="round" fill="clear">sign up</ion-button>
    </form>
    <div class="footer">
      <ion-text>
