--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -3,8 +3,8 @@
 }
 ion-item{
    
-    margin-top: 10px;
-    margin-bottom: 15px;
+    //margin-top: 10px;
+    //margin-bottom: 15px;
     border-radius: 40px;
     margin-left: 15px;
     margin-right: 15px;
@@ -40,11 +40,25 @@ ion-content {
     padding-right:28px;
     
  }
+ ion-button{
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    border: 3px solid white;
+    --padding:3% !important;
+  
+    border-radius: 40px;
+    font-size: 1.3rem;
+    font-weight: 420;
+    color: white;
+    margin-left:30px;
+    margin-right:30px;
+    margin-bottom: 50px;
+}
  
  .footer{
-     position:absolute;
+     //position:absolute;
      width:100%;
-     bottom: 10px; 
+     //bottom: 10px; 
      text-align: center;
      h3{
          font-size: 1.2rem;
@@ -60,7 +74,7 @@ ion-content {
     //width: 10px !important;
 }
 ion-input{
-   padding:1.5% !important;
+   //padding:1% !important;
    border-radius: 40px;
    border:none !important;
    border: 2px solid white !important;
@@ -88,21 +102,78 @@ ion-label{
 ion-item{
    margin-left: 20px;
    margin-right: 20px;
-   margin-bottom: 10px;
+   //margin-bottom: 0px;
+  
 }
 form{
     
-  
+   
 }
 img{
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
 }
 .logo{
     display: flex;
     flex-direction: column;
     align-items: center; 
-    padding: 2%;
+    //padding: 2%;
 
+}
+//media query 
+@media screen and (max-width: 320px) and (min-width: 320px){
+      form{
+         // display: none;
+      }
+      .footer{
+        //background-color: darkblue;
+        padding: 0px;
+        //margin-bottom: 1rem !important;
+        position:absolute;
+        top: 510px;
+        bottom:0px;
+        width:100%;
+        //bottom: 10px; 
+        text-align: center;
+        h3{
+            padding-top: 25px;
+            font-size: 1rem;
+           
+           
+        }
+        ion-button{
+            font-size: 0.5rem;
+        }
+        ion-text{ 
+            margin-top: -1rem;
+        }
+        ion-item{
+            margin-bottom: -5px;
+        }
+    }
+    img{
+        width: 60px;
+        height: 60px;
+    }
+    ion-input{
+        font-size: 12px;
+     }
+     ion-label{
+        margin-left: 60px;
+        margin-right:60px;
+    }
+}
+//smaller screen
+@media screen and (max-width: 280px) and (min-width: 280px){
+    ion-label{
+        margin-left: 60px;
+        margin-right:60px;
+    }
+    .footer{
+        padding: 1px;
+        h3{
+            font-size: 17px;
+        }
+    }
 }
