--- a/src/app/pages/soil-page/soil-page.page.scss
+++ b/src/app/pages/soil-page/soil-page.page.scss
@@ -4,7 +4,7 @@
      background-repeat: no-repeat;
      // padding: 3%;
       display: grid;
-      grid-template-columns: 65% 35%;
+      grid-template-columns: 60% 40%;
       //justify-content:space-between;
       background-color: 	#E3B266;
   
@@ -66,7 +66,7 @@
 
  .soil-moisture{
     margin:15px 0px 30px 0px;
-    width: 90%;
+    width: 95%;
     //background-color: #50B948;
     float: right;
     text-align: right;
@@ -121,7 +121,7 @@ ion-row .info:nth-child(2){
         opacity: 55%; 
         text-align: left;
         font-size: 19px;
-        //text-transform: capitalize;
+        text-transform: capitalize;
     }
     ion-text{
         p{
@@ -151,4 +151,77 @@ ion-row .info:nth-child(2){
     }
     
      
+}
+.line-graph{
+    width: 100% !important;
+    float: left;
+    
+}
+//temperature trend style
+.temperature-trend{
+    box-shadow: 0 10px 50px rgba(240, 236, 236, 0.979) inset;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    width: 95%;
+    float:left;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+
+    .content{
+        ion-text{
+            h3{
+                font-weight: 550 !important;
+                
+            }
+          
+        }
+
+        padding-left:1.6em;
+  
+
+    }
+
+    //temperature trend text
+    .content ion-text h3:nth-child(2){
+        margin-top:-10px !important;
+        font-size: 22px;
+        font-weight: 400;
+        text-align: left;
+        text-transform: uppercase;
+    }
+    .content ion-text p:nth-child(1){
+        opacity: 55%; 
+        text-align: left;
+        font-size: 19px;
+        text-transform: capitalize;
+    }
+    ion-text{
+        p{
+            padding-top: 1em;
+        }
+    }
+
+    .icon{
+       
+        // background-color: #50B948;
+         border-top-left-radius: 50px;
+         border-bottom-left-radius: 50px;
+         ion-avatar{
+            margin:8px 10px 10px 11px !important;
+            float:right;
+             
+         }
+         ion-icon{
+             float:right;
+             padding: 0.5em;
+             width: 55px;
+             height: 55px;
+             background-color: white;
+             border-radius: 50%;
+             color: blue;
+             text-align: center;
+         }
+ 
+     }
+
 }
