--- a/src/app/pages/water-page/water-page.page.html
+++ b/src/app/pages/water-page/water-page.page.html
@@ -1,9 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>water-page</ion-title>
+    <ion-title>water-pag</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-</ion-content>
+ 
+
+  <ion-content>
+    <ion-list-header color="light">Vertical Bar Chart</ion-list-header>
+    <ion-card class="welcome-card">
+      <ion-card-header>
+        <ion-card-subtitle>Number of Viewers per season for</ion-card-subtitle>
+        <ion-card-title>Game of Thrones</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <canvas id="barChart" ></canvas>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
