aligned dashboard content

--- a/src/app/pages/dashboard-page/dashboard-page.page.html
+++ b/src/app/pages/dashboard-page/dashboard-page.page.html
@@ -14,21 +14,23 @@
      </div>
   
   </div>
-
-  <div class="soil-moisture">
-    <div class="icon">
-        <ion-avatar>
-          <ion-icon name="water-sharp"></ion-icon>
-        </ion-avatar>
-    </div>
-   
-    <div class="content">
-      <ion-text>
-        <p> soil moisture (1-100%)</p>
-          <h3>wet</h3>
-      </ion-text>
+  <div class="soil-moisture-wrap">
+    <div class="soil-moisture">
+      <div class="icon">
+          <ion-avatar>
+            <ion-icon name="water-sharp"></ion-icon>
+          </ion-avatar>
+      </div>
+     
+      <div class="content">
+        <ion-text>
+          <p> soil moisture (1-100%)</p>
+            <h3>wet</h3>
+        </ion-text>
+      </div>
     </div>
   </div>
+
   
 
   <div class="cloud">
@@ -65,44 +67,40 @@
       </div>
       </div>
   </div>
-   <div class="middle-section">
-      <div class="content">
-        <ion-row>
-            <ion-col size="3.8">
-              <ion-icon name="water-outline"></ion-icon>
-                <h3>humidity</h3>
-                <p>the amount of water vapor in the air.</p>
-            </ion-col>
-            <ion-col size="3.8">
-              <ion-icon name="thermometer-outline"></ion-icon>
-                <h3>temperature</h3>
-                <p>Ambient air temperature in degrees Celcius</p>
-            </ion-col>
-            <ion-col size="4">
-              <ion-icon name="bulb"></ion-icon>
-                <h3>light intensity</h3>
-                <p>Environmental light intensity measured in lux</p>
-            </ion-col>
-        
-        </ion-row>
-      </div>
-   </div>
-
-   <div class="real-time-data">
-    <div class="real-time-data-icon">
-      <ion-avatar>
-        <ion-icon name="earth-sharp"></ion-icon>
-      </ion-avatar>
+  <div class="section group">
+    <div class="col span_1_of_3">
+      <ion-icon name="water-outline"></ion-icon><br>
+    hjhjhchjxchxjhcxjhchxgchxgchxgcxghgcxghcxghgcxghgcxhggcgfh
+ 
     </div>
-   
-    <div class="real-time-data-content">
-      <ion-text>
-        <h5>Real time data</h5>
-          <p>The farm state function displays real time data 
-            of PH level from NPK tester, relative huminity,
-            soil moisture, envirentmental light intensity and humidity.
-          </p>
-      </ion-text>
+    <div class="col span_1_of_3">
+    This is column 2
+    jhkj
+    jkj
+    </div>
+    <div class="col span_1_of_3">
+    This is column 3
+    jkjjklj
     </div>
   </div>
+  <div class="real-time-data-wrap">
+    <div class="real-time-data">
+      <div class="real-time-data-icon">
+        <ion-avatar>
+          <ion-icon name="earth"></ion-icon>
+        </ion-avatar>
+      </div>
+     
+      <div class="real-time-data-content">
+        <ion-text>
+          <h5>Real time data</h5>
+            <p>The farm state function displays real time data 
+              of PH level from NPK tester, relative huminity,
+              soil moisture, envirentmental light intensity and humidity.
+            </p>
+        </ion-text>
+      </div>
+    </div>
+  </div>
+   
 </ion-content>
