--- a/src/app/pages/soil-page/soil-page.page.html
+++ b/src/app/pages/soil-page/soil-page.page.html
@@ -38,13 +38,7 @@
 
   <!--graph section-->
   <div class="line-graph">
-    <ion-card>
-      <ion-card-header> bar Chart </ion-card-header>
-      <ion-card-content>
-        <canvas id="barCanva">
-        </canvas>
-      </ion-card-content>
-    </ion-card>
+
     
   </div><!--end of graph section-->
   
@@ -62,6 +56,22 @@
       </ion-avatar>
     </div>
   </div>
-
+  
+  <div class="second">
+    <div class="soil-moisture">
+      <div class="icon">
+          <ion-avatar>
+            <ion-icon name="water-sharp"></ion-icon>
+          </ion-avatar>
+      </div>
+ 
+      <div class="content">
+        <ion-text>
+          <p> Water usage</p>
+            <h3>70L</h3> 
+        </ion-text>
+      </div>
+</div>
+  </div>
 
 </ion-content>
