--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -7,7 +7,7 @@
     
      <ion-button expand="block" shape="round" fill="clear" (click)="toDash()">sign in</ion-button>
     <ion-text>
-      <h3>Don't have an account? <span>Sign up</span></h3>
+      <h3>Don't have an account? <a style="color: white;" (click)="toDash()"><span>Sign up</span></a></h3>
     </ion-text>
    
   </div>
