--- a/src/app/pages/soil-page/soil-page.page.html
+++ b/src/app/pages/soil-page/soil-page.page.html
@@ -41,7 +41,17 @@
 
     
   </div><!--end of graph section-->
-  
+  <ion-card>
+    <ion-card-header>
+    LINE CHART
+    </ion-card-header>
+    <ion-card-title>
+      LINE GRAPH HERE
+    </ion-card-title>
+    <ion-card-content>
+    
+    </ion-card-content>
+  </ion-card>
   <!--temperature trend section-->
   <div class="temperature-trend">
     <div class="content">
@@ -56,7 +66,21 @@
       </ion-avatar>
     </div>
   </div>
-  
+  <div class="graph-container">
+    <ion-card>
+      <ion-card-header>
+      LINE CHART
+      </ion-card-header>
+      <ion-card-title>
+        LINE GRAPH HERE
+      </ion-card-title>
+      <ion-card-content>
+      
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+
   <div class="second">
     <div class="soil-moisture">
       <div class="icon">
@@ -67,11 +91,51 @@
  
       <div class="content">
         <ion-text>
-          <p> Water usage</p>
-            <h3>70L</h3> 
+          <p>temperature and humudity trend</p>
+            <h3>80%</h3> 
         </ion-text>
       </div>
 </div>
   </div>
-
+  <div class="graph-container">
+    <ion-card>
+      <ion-card-header>
+      LINE CHART
+      </ion-card-header>
+      <ion-card-title>
+        LINE GRAPH HERE
+      </ion-card-title>
+      <ion-card-content>
+      
+      </ion-card-content>
+    </ion-card>
+  </div>
+    <!--temperature trend section-->
+    <div class="temperature-trend">
+      <div class="content">
+        <ion-text class="ph-level">
+          <p>PH levels and soil moisture</p>
+            <h3>8.53 average</h3> 
+        </ion-text>
+      </div>
+      <div class="icon">
+        <ion-avatar>
+          <ion-icon name="cloudy"></ion-icon>
+        </ion-avatar>
+      </div>
+    </div>
+    <div class="graph-container">
+      <ion-card>
+        <ion-card-header>
+        BAR CHART
+        </ion-card-header>
+        <ion-card-title>
+          BAR GRAPH HERE
+        </ion-card-title>
+        <ion-card-content>
+        
+        </ion-card-content>
+      </ion-card>
+    </div>
+   
 </ion-content>
