--- a/src/app/pages/dashboard-page/dashboard-page.page.scss
+++ b/src/app/pages/dashboard-page/dashboard-page.page.scss
@@ -2,9 +2,20 @@ ion-toolbar{
     //--background-color:transparent;
     //--ion-color-base:transparent !important;
     //--border-width: 0 !important;
-    
-
+    --background-image: url(../../../assets/Farmru-icons/inter.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    //padding: 5%;
+    //height: 100px;
+    //--background: #E3B266;
+   
+    img{
+        float: right !important;
+        width: 50px;
+        height: 50px;
+    }
 }
+
 ion-row{
     align-content: space-between !important;
     h3{
@@ -23,6 +34,9 @@ ion-row{
   // background: url(../../../assets/Farmru-icons/inter.png);
    background-size: cover;
    background-repeat: no-repeat;
+   position: fixed;
+   width: 100% !important;
+   z-index: 100;
    // padding: 3%;
     display: grid;
     grid-template-columns: 65% 35%;
@@ -107,6 +121,7 @@ ion-row .info:nth-child(2){
 
 //soil div
 .soil-moisture{
+    margin-top: 100px;
     box-shadow: 0 10px 50px rgba(240, 236, 236, 0.979) inset;
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -154,7 +169,7 @@ ion-row .info:nth-child(2){
             height: 55px;
             //background-color: white;
             border-radius: 50%;
-            color: blue;
+            color: #232278;
             text-align: center;
         }
 
@@ -283,6 +298,7 @@ ion-row .info:nth-child(2){
       height: 110px;
     }
 }
+//middle section style
 .middle-section{
     width: 100% !important;
     float: left;
@@ -308,7 +324,7 @@ ion-row .info:nth-child(2){
              
             
               ion-icon{
-                  font-size: 50px;
+                  font-size: 45px;
                   color: rgb(46, 46, 121);
               }
 
@@ -316,6 +332,30 @@ ion-row .info:nth-child(2){
     }
 
 }
+.middle{
+    width: 100% !important;
+    .fa{
+        font-size: 50px;
+        color: rgb(46, 46, 121);
+        margin-top: 5px !important;
+    }
+    h3{
+        font-size: 10px;
+        font-weight: 400;
+        margin-bottom: 0px;
+        margin-top: 15px !important;
+        text-transform: uppercase;
+    }
+    p{
+        font-size: 9px;
+        line-height: 1;
+        font-weight: 100;
+        padding-left: 2px;
+        padding-right: 2px;
+        padding-bottom: 3px;
+    }
+}
+
 
 //real-time-data-section
 .real-time-data-wrap,
@@ -385,6 +425,13 @@ ion-row .info:nth-child(2){
 	display: block;
 	float:left;
 	margin: 1% 0 1% 1.6%;
+    text-align: center;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
+    box-shadow: 0 10px 50px rgba(240, 236, 236, 0.979) inset;
+   padding: 1%;
 }
 .col:first-child { margin-left: 0; }
 
@@ -396,8 +443,12 @@ ion-row .info:nth-child(2){
 /*  GRID OF THREE  */
 .span_3_of_3 { width: 100%; }
 .span_2_of_3 { width: 66.13%; }
-.span_1_of_3 { width: 32.26%; }
-
+.span_1_of_3 { width: 31.26% }
+.section>div{
+    height: 145px;
+}
+.section div:nth-child(1){
+    margin-left: 6px;
+}
 /*  GO FULL WIDTH BELOW 480 PIXELS */
-
 
