--- a/src/app/pages/production-page/production-page.page.html
+++ b/src/app/pages/production-page/production-page.page.html
@@ -1,9 +1,50 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>production-page</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
-
+  <div class="header">
+    <div style="padding: 3%;">
+      <ion-text slot="start">
+        <h1>production</h1>
+      </ion-text>
+    </div>
+     <div style="padding: 3%;">  
+      <ion-avatar slot="end">
+        <img src="../../../assets/img/Farmru_logo_size3.png" alt="">
+      </ion-avatar>
+     </div>
+  
+  </div>
+  <div class="heading">
+    <ion-text>
+      <h1>
+        <span>mtb</span> (month to date)
+      </h1>
+    </ion-text>
+  </div>
+  <!--soil moisture-->
+  <div class="soil-moisture">
+    <div class="icon">
+        <ion-avatar>
+          <ion-icon name="flower"></ion-icon>
+        </ion-avatar>
+    </div>
+    <div class="content">
+      <ion-text>
+        <p>Potential crops</p>
+          <h3>45 <span>Tonnes</span> </h3>
+      </ion-text>
+    </div>
+  </div>
+  <div class="graph-container">
+    <ion-card>
+      <ion-card-header>
+      LINE CHART
+      </ion-card-header>
+      <ion-card-title>
+        LINE GRAPH HERE
+      </ion-card-title>
+      <ion-card-content>
+      
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
