--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -7,25 +7,27 @@
     </ion-text>
   </div>
    
-   <form>
-       <ion-item lines="none">
+     <div class="form">
+      <ion-item lines="none">
         <ion-label position="stacked" >email address</ion-label>
-        <ion-input type="tel"></ion-input>
+        <ion-input  [(ngModel)]="email"  type="email"></ion-input>
        </ion-item>
     
 
       <ion-item lines="none">
         <ion-label position="stacked">password</ion-label>
-        <ion-input type="tel"></ion-input>
+        <ion-input  [(ngModel)]="password"  type="password"></ion-input>
       </ion-item>
      
    
 
-      <ion-button expand="block" shape="round" fill="clear">sign in</ion-button>
-   </form>
+      <ion-button expand="block" shape="round" fill="clear" (click)="signIn()">sign in</ion-button>
+   
+     </div>
+     
    <div class="footer">
     <ion-text>
-      <h3>Don't have an account? <span>Sign up</span></h3>
+      <h3>Don't have an account? <a style="color: white;" (click)="toSignUp()"><span>Sign up</span></a>  </h3>
     </ion-text>
    
     </div>
