--- a/src/app/pages/water-page/water-page.page.html
+++ b/src/app/pages/water-page/water-page.page.html
@@ -1,22 +1,91 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>water-pag</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
-
- 
-
-  <ion-content>
-    <ion-list-header color="light">Vertical Bar Chart</ion-list-header>
-    <ion-card class="welcome-card">
+  <div class="header">
+    <div style="padding: 3%;">
+      <ion-text slot="start">
+        <h1>water</h1>
+      </ion-text>
+    </div>
+     <div style="padding: 3%;">  
+      <ion-avatar slot="end">
+        <img src="../../../assets/img/Farmru_logo_size3.png" alt="">
+      </ion-avatar>
+     </div>
+  
+  </div>
+  <div class="heading">
+    <ion-text>
+      <h1>
+        <span>mtb</span> (month to date)
+      </h1>
+    </ion-text>
+  </div>
+  <!--soil moisture-->
+  <div class="soil-moisture">
+    <div class="icon">
+        <ion-avatar>
+          <ion-icon name="water-sharp"></ion-icon>
+        </ion-avatar>
+    </div>
+    <div class="content">
+      <ion-text>
+        <p> Water usage</p>
+          <h3>70K <span>Litres</span></h3>
+      </ion-text>
+    </div>
+  </div>
+  <div class="graph-container">
+    <ion-card>
       <ion-card-header>
-        <ion-card-subtitle>Number of Viewers per season for</ion-card-subtitle>
-        <ion-card-title>Game of Thrones</ion-card-title>
+      LINE CHART
       </ion-card-header>
+      <ion-card-title>
+        LINE GRAPH HERE
+      </ion-card-title>
       <ion-card-content>
-        <canvas id="barChart" ></canvas>
+      
       </ion-card-content>
     </ion-card>
-  </ion-content>
+  </div>
+    <!--temperature trend section-->
+    <div class="temperature-trend">
+      <div class="content">
+        <ion-text>
+          <p>power usage</p>
+            <h3>50Kw</h3> 
+        </ion-text>
+      </div>
+      <div class="icon">
+        <ion-avatar>
+          <ion-icon name="thermometer-outline"></ion-icon>
+        </ion-avatar>
+      </div>
+    </div>
+    <div class="graph-container">
+      <ion-card>
+        <ion-card-header>
+        LINE CHART
+        </ion-card-header>
+        <ion-card-title>
+          LINE GRAPH HERE
+        </ion-card-title>
+        <ion-card-content>
+        
+        </ion-card-content>
+      </ion-card>
+    </div>
+      <!--soil moisture-->
+  <div class="soil-moisture">
+    <div class="icon">
+        <ion-avatar>
+          <ion-icon name="cloudy"></ion-icon>
+        </ion-avatar>
+    </div>
+    <div class="content">
+      <ion-text>
+        <p>weather forecast</p>
+        <h3>25<sup>o</sup>C</h3> 
+      </ion-text>
+    </div>
+  </div>
+</ion-content>
